Fixed issue with the mobile-hide class on tables.
Using mobile-hide on table rows or cells with wrapped text would cause misalignment of cells.

--- a/base.css
+++ b/base.css
@@ -614,4 +614,11 @@ select:-moz-focusring {
     .mobile-hide {
         display: block;
     }
+    th.mobile-hide,
+    td.mobile-hide {
+        display: table-cell;
+    }
+    tr.mobile-hide {
+        display: table-row;
+    }
 }
